--- a/Readme.me
+++ b/Readme.me
@@ -34,7 +34,7 @@ Esta é a forma recomendada e mais simples de executar toda a aplicação.
 
 1.  **Clone o repositório:**
     git clone https://github.com/marcelo-mlls/cadastro-tarefas
-    cd <NOME_DA_PASTA_DO_PROJETO>
+    cd [pasta onde baixou projeto]
 
 2.  **Construa e suba os contêineres:**
     Na raiz do projeto, execute o seguinte comando. Ele irá construir as imagens para os três serviços e iniciar todos os contêineres.
